force-app/main/default/objects/AR_Legal_Entity__c/fields/Allow_Issue_From_Cross__c.field-meta.xml
<CustomField>
    <fullName>Allow_Issue_From_Cross__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Issue From Cross</label>
    <type>Checkbox</type>
</CustomField>