force-app/main/default/objects/AR_Legal_Entity__c/fields/BU_SHORT_CODE__c.field-meta.xml
<CustomField>
    <fullName>BU_SHORT_CODE__c</fullName>
    <label>BU SHORT CODE</label>
    <type>TextArea</type>
</CustomField>