force-app/main/default/objects/AR_Legal_Entity__c/fields/copy_of_vat_certificate_attached__c.field-meta.xml
<CustomField>
    <fullName>copy_of_vat_certificate_attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>copy of vat certificate attached</label>
    <type>Checkbox</type>
</CustomField>