force-app/main/default/objects/AR_Legal_Entity__c/fields/Default_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Default_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Bank Account</label>
    <referenceTo>AR_Bank_Account__c</referenceTo>
    <relationshipName>Legal_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>