force-app/main/default/objects/AR_Legal_Entity__c/fields/Default_Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_Merchant_ID__c</fullName>
    <label>Default Merchant ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>