force-app/main/default/objects/AR_Legal_Entity__c/fields/EBS_Segment_1__c.field-meta.xml
<CustomField>
    <fullName>EBS_Segment_1__c</fullName>
    <description>This field stores Legacy Id of the Nakheel Records</description>
    <externalId>true</externalId>
    <label>EBS Segment 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>