force-app/main/default/objects/AR_Legal_Entity__c/fields/Effective_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Registration_Date__c</fullName>
    <label>Effective Registration Date</label>
    <type>Date</type>
</CustomField>