force-app/main/default/objects/AR_Legal_Entity__c/fields/Email_address__c.field-meta.xml
<CustomField>
    <fullName>Email_address__c</fullName>
    <description>Using this field in legal notice to capture seller information</description>
    <label>Email address</label>
    <type>Email</type>
</CustomField>