force-app/main/default/objects/AR_Legal_Entity__c/fields/ERP_Business_Unit_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Business_Unit_Id__c</fullName>
    <description>used for pricing engine to identify orgid</description>
    <label>ERP Business Unit Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>