force-app/main/default/objects/AR_Legal_Entity__c/fields/FA_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>FA_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account</label>
    <referenceTo>AR_GL_Account__c</referenceTo>
    <relationshipName>Legal_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>