force-app/main/default/objects/AR_Legal_Entity__c/fields/Full_Legal_Name_of_Entity__c.field-meta.xml
<CustomField>
    <fullName>Full_Legal_Name_of_Entity__c</fullName>
    <label>Full Legal Name of Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>