force-app/main/default/objects/AR_Legal_Entity__c/fields/GL_Segment_1__c.field-meta.xml
<CustomField>
    <fullName>GL_Segment_1__c</fullName>
    <label>Legal Entity Oracle Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>