force-app/main/default/objects/AR_Legal_Entity__c/fields/Invoice_Total_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Total_Paid_Amount__c</fullName>
    <label>Invoice Total Paid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>