force-app/main/default/objects/AR_Legal_Entity__c/fields/InvoiceDocIdOOS__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDocIdOOS__c</fullName>
    <formula>IF(CONTAINS( Operating_Unit__r.Name,&apos;Meraas&apos;),
&apos;a0CTX00000ZB78T&apos;,
IF(CONTAINS(Operating_Unit__r.Name,&apos;Shamal&apos;),
&apos;a0CTX00000ZB78T&apos;,
IF(CONTAINS(Operating_Unit__r.Name,&apos;Nakheel&apos;),
&apos;a0CTX00001DxDEZ&apos;,
IF(CONTAINS(Operating_Unit__r.Name,&apos;Meydan&apos;),
&apos;a0CTX00001hzAij&apos;,
IF(CONTAINS(Operating_Unit__r.Name,&apos;District One&apos;),
&apos;a0CTX00001hzAij&apos;,
IF(CONTAINS(Operating_Unit__r.Name,&apos;Limitless&apos;),
&apos;a0CTX00001ygPq9&apos;,
IF(CONTAINS(Operating_Unit__r.Name,&apos;DPG BTS&apos;),
&apos;a0CTX00000ZAy0V&apos;,
IF(CONTAINS(Operating_Unit__r.Name,&apos;DPG Land&apos;),
&apos;a0CTX00000aWVYr&apos;,
IF(CONTAINS(Operating_Unit__r.Name,&apos;DHRE&apos;),&apos;a0CTX00000Z9CeF&apos;,&apos;&apos;)
))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InvoiceDocIdOOS</label>
    <type>Text</type>
</CustomField>