force-app/main/default/objects/AR_Legal_Entity__c/fields/Operating_Unit__c.field-meta.xml
<CustomField>
    <fullName>Operating_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating Unit</label>
    <referenceTo>AR_Operating_Unit__c</referenceTo>
    <relationshipName>Legal_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>