force-app/main/default/objects/AR_Legal_Entity__c/fields/Tax_Registered__c.field-meta.xml
<CustomField>
    <fullName>Tax_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Registered</label>
    <type>Checkbox</type>
</CustomField>