force-app/main/default/objects/AR_Legal_Entity__c/fields/Tax_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Registration_Number__c</fullName>
    <label>Tax Registration Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>