force-app/main/default/objects/AR_Legal_Entity__c/fields/VAT_Group__c.field-meta.xml
<CustomField>
    <fullName>VAT_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VAT Group</label>
    <referenceTo>AR_VAT_Group__c</referenceTo>
    <relationshipName>Legal_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>