force-app/main/default/objects/AR_Legal_Entity__c/fields/VAT_Lookup__c.field-meta.xml
<CustomField>
    <fullName>VAT_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default VAT</label>
    <referenceTo>VAT__c</referenceTo>
    <relationshipName>Legal_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>